--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,34 @@
     max-width: 1440px;
     margin: 0 auto;
   }
+  .absolute-position-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .form-element {
+    width: 370px;
+    padding: 50px 35px 35px 35px;
+    border-radius: 40px;
+    background: #ecf0f3;
+    box-shadow: 10px 10px 20px #cbced1, -10px -10px 20px #ffffff;
+  }
+  .input-field {
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+    color: #555;
+  }
+
+  .input-container {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    box-shadow: inset 5px 5px 8px #cbced1, inset -5px -5px 8px #ffffff;
+  }
 }
